# glfract

./: CMakeLists.txt  README.md  coloring-fs.glsl  fractal-fs.glsl  glwidget.cpp  glwidget.hpp  gui.cpp  gui.hpp  gui.qrc  state.cpp  state.hpp  vs.glsl
